Fix checkbox padding
The bottom padding of the View Predicted Species checkbox was
too large, reduced it from 10px to 5px.

--- a/denvercode/full/style.css
+++ b/denvercode/full/style.css
@@ -172,7 +172,7 @@
 }
 
 #options-predicted {
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 
 #options-annotations {
